fixed jumping animation when showing input history caused by grid

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1884,7 +1884,11 @@ key {
   #resultReplay {
     // grid-area: wordsHistory;
     color: var(--sub-color);
-    grid-column: 1/3;
+    // grid-column: 1/3;
+    margin-bottom: 1rem;
+    .icon-button {
+      padding: 0 0.5rem;
+    }
     .heatmapLegend {
       display: inline-grid;
       grid-template-columns: auto auto auto;
@@ -1921,6 +1925,7 @@ key {
     }
     .title {
       user-select: none;
+      margin-bottom: 0.25rem;
     }
     .words {
       display: flex;
